# DevHelm

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  readmd.md  update_namespaces.sh
.github/workflows/: agent-python.yml  control-ci.yml  mcp-go.yml  plugin-artifact.yml  plugin-ci.yml  web-php.yml
.junie/: git_usage.md  guidelines.md  guidelines.txt  jira_usage.md
.junie/agent/: guidelines.md
.junie/control/: guidelines.md
.junie/mcp/: guidelines.md
.junie/plugin/: guidelines.md
.junie/web/: guidelines.md  repository-pattern.md
agent/: .gitignore  CONTRIBUTING.md  README.md  config.py  logger_factory.py  main.py  pyproject.toml  requirements.txt  task_requester.py  test_main.py  test_task_requester.py  ui_interaction.py
agent/src/: __init__.py
agent/src/devhelm_agent/: __init__.py  task_requester.py
agent/tests/: __init__.py  conftest.py  test_main.py  test_task_requester.py
control/: .env  .env.dev  behat.yml.dist  docker-compose.yaml  guidelines.md  phpunit.dist.xml  run-behat-tests.sh
control/assets/services/: planservice.js
control/config/: routes.yaml  services.yaml  services_test.yaml
control/features/Agents/: create.feature  edit.feature  list.feature
control/features/Leads/: create.feature
control/features/Teams/: view.feature
control/features/User/: sign_up.feature
control/src/: Kernel.php
control/src/Controller/: FrontendController.php
control/src/Entity/: Feedback.php  ForgotPasswordCode.php  InviteCode.php  Team.php  TeamInviteCode.php  User.php
control/src/Factory/: AgentFactory.php  CreateAgentDtoFactory.php  LeadFactory.php
control/src/Interface/: TicketProviderInterface.php
control/src/Interfaces/: TicketProviderInterface.php
control/src/Repository/: AgentRepository.php  AgentRepositoryInterface.php  ApiKeyRepository.php  ApiKeyRepositoryInterface.php  FeedbackRepository.php  InviteCodeRepository.php  LeadRepository.php  TaskRepository.php  (+5 more)
docs/agent/: installation.md  logging.md  usage.md
junie_agent/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  plan.txt  pyproject.toml
junie_agent/src/devhelm_agent/: logger_factory.py
junie_agent/src/devhelm_junie_agent/: config.py  main.py
junie_agent/tests/: conftest.py  test_main.py  test_task_requester.py
mcp/: CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  go.mod  go.sum  main.go
plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
prompts/: code_review_feedback.md  new_task.md
web/: .env  .gitignore  CONTRIBUTING.md  behat.yml.dist  composer.json  docker-compose.yaml
web/config/: services.yaml  services_test.yaml
web/docs/: behat-testing.md
web/public/: index.php
(+145 files in other folders)
