[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devhelm-agent"
version = "0.1.0"
description = "Screen automation agent for DevHelm"
readme = "README.md"
authors = [
  { name = "DevHelm Team" }
]
requires-python = ">=3.8"
dependencies = [
  "pyautogui>=0.9.54",
  "opencv-python>=4.5.0",
  "pillow>=9.0.0",
  "urllib3>=1.26.0",
  "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/devhelm/devhelm-monorepo"

[project.scripts]
devhelm-junie-agent = "devhelm_junie_agent.main:main"

[tool.setuptools]
# Use src layout with package discovery
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=devhelm_junie_agent --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["devhelm_junie_agent"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
